--- a/career/Electronics.html
+++ b/career/Electronics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="vn">
 
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,8 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dây truyền động</title>
-    <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
+    <title>Ngành điện tử</title>
+    <link type="image/x-icon" rel="icon" href="../img/favicon/favicon.ico" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
@@ -16,13 +16,13 @@
         rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
 </head>
 
 <body>
@@ -57,15 +57,12 @@
             </div>
         </div>
     </div>
-
     <!-- Header Info Begin -->
     <div class="header-info">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="header-item">
-                        <p class="comp-name">CÔNG TY TNHH MTV THẾ CAO</p>
-                    </div>
+                <div class="header-item">
+                    <p class="comp-name">CÔNG TY TNHH MTV THẾ CAO</p>
                 </div>
             </div>
         </div>
@@ -77,57 +74,69 @@
         <div class="container-fluid">
             <div class="inner-header">
                 <div class="logo">
-                    <a href="./index.html"><img src="./img/logo.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/logo.png" alt=""></a>
+                    <a class="logo-mobile" href="../index.html"><img src="../img/logo-mobile.png" alt=""></a>
+
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
-                        <li><a href="./index.html">Trang chủ</a></li>
-                        <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="active root-menu" href="#">Sản phẩm</a>
+                        <li><a href="../index.html">Trang chủ</a></li>
+                        <li><a href="../infomation.html">Giới thiệu</a></li>
+                        <li><a class="root-menu" href="#">Sản phẩm</a>
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
-                                <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
-                                <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="#">Dây đai truyền động</a></li>
-                                <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
+                                <li><a href="../PVC.html">Băng tải PVC, PU, TPU</a></li>
+                                <li><a href="../ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="../XichNhua.html">Băng tải xích nhựa</a></li>
+                                <li><a href="../PURang.html">Dây PU răng</a></li>
+                                <li><a href="../DayTruyenDong.html">Dây đai truyền động</a></li>
+                                <li><a href="../dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
-                        <li><a class="root-menu" href="./career/Career.html">Ngành nghề</a>
+                        <li><a class=" active root-menu" href="./Career.html">Ngành nghề</a>
                             <p>Ngành nghề</p>
                             <ul class="sub-menu career">
-                                <li><a href="./career/Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
+                                <li><a href="./Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
                                 </li>
-                                <li><a href="./career/Aviation.html">Ngành hàng không</a></li>
-                                <li><a href="./career/Food industry.html">Ngành thực phẩm</a></li>
-                                <li><a href="./career/Wood industry.html">Ngành gỗ</a></li>
-                                <li><a href="./career/Packaging industry.html">Ngành bao bì</a></li>
-                                <li><a href="./career/Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
-                                <li><a href="./career/Electronics.html">Ngành điện tử</a></li>
-                                <li><a href="./career/Tobacco industry.html">Ngành thuốc lá</a></li>
-                                <li><a href="./career/Granite industry.html">Ngành đá Granite</a></li>
-                                <li><a href="./career/Fisheries.html">Ngành thủy sản</a></li>
-                                <li><a href="./career/Steel sheet industry.html">Ngành tôn thép</a></li>
-                                <li><a href="./career/Aluminum industry.html">Ngành nhôm</a></li>
-                                <li><a href="./career/Sports industry.html">Ngành thể thao</a></li>
-                                <li><a href="./career/Other heavy industry.html">Ngành công nghiệp nặng khác</a></li>
+                                <li><a href="./Aviation.html">Ngành hàng không</a></li>
+                                <li><a href="./Food industry.html">Ngành thực phẩm</a></li>
+                                <li><a href="./Wood industry.html">Ngành gỗ</a></li>
+                                <li><a href="./Packaging industry.html">Ngành bao bì</a></li>
+                                <li><a href="./Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
+                                <li><a href="#">Ngành điện tử</a></li>
+                                <li><a href="./Tobacco industry.html">Ngành thuốc lá</a></li>
+                                <li><a href="./Granite industry.html">Ngành đá Granite</a></li>
+                                <li><a href="./Fisheries.html">Ngành thủy sản</a></li>
+                                <li><a href="./Steel sheet industry.html">Ngành tôn thép</a></li>
+                                <li><a href="./Aluminum industry.html">Ngành nhôm</a></li>
+                                <li><a href="./Sports industry.html">Ngành thể thao</a></li>
+                                <li><a href="./Other heavy industry.html">Ngành công nghiệp nặng khác</a></li>
                             </ul>
                         </li>
-                        <li><a href="./service.html">Dịch vụ</a></li>
-                        <li><a href="./contact.html">Liên hệ</a></li>
+                        <li><a href="../service.html">Dịch vụ</a></li>
+                        <li><a href="../contact.html">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
-    <!-- Hero Slider Begin -->
-    <section class="hero-slider">
-        <div class="hero-items owl-carousel">
+    <!-- Lookbok Section Begin -->
+    <section class="lookbok-section lookbok-section-info">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="info-pic-comp offset-lg-1">
+                    <div class="lookbok-pic">
+                        <img src="../img/career/NganhDienTu/bang tai nganh dien tu.jpg" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+
         </div>
     </section>
-    <!-- Hero Slider End -->
+    <!-- Lookbok Section End -->
 
     <!-- Latest Product Begin -->
     <section class="latest-products spad">
@@ -136,34 +145,35 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <div class="section-title text-center">
-                            <h3>Dây Truyền động</h3>
+                            <h3>Ngành điện tử</h3>
                         </div>
 
-                        <div class="section-detail">
+                        <div class="section-detail PTFE">
                             <span>
-                                Dây curoa bản dẹt thường là chạy tốc độ cao, lớp giữa của dây là lớp nilon, bên ngoài
-                                được bọc bằng lớp cao su, da, vải sợi,... <br><br>
-                                <strong>Công ty Thế Cao</strong> đang có các loại dây từ 0.8mm đến 6mm cho dây xanh
-                                vàng, dây xăng, và
-                                dây hapasit, được nối ép trực tiếp tại xưởng Thế Cao do đó tiết kiệm được thời gian giao
-                                hàng đến cho khách.<br><br>
-                                Dây đai dẹp, dây truyền động được nhập khẩu 100% từ nước ngoài, Chúng tôi vinh dự là nhà
-                                cung cấp hàng đầu và đa dạng mẫu mã đi kèm chất lượng tốt nhất cho thị trường,ứng dụng
-                                chủ yếu trong ngành như:<br>
-                                <ul>
-                                    <li>Dệt may, dệt sợi, in ấn, bao bì giấy.</li>
-                                    <li>Sản xuất ngành gỗ.</li>
-                                    <li>Thực phẩm, chế biến thủy sản…</li>
-                                </ul>
+                                <strong>CÔNG TY THẾ CAO</strong> chuyên sản suất và cung cấp trên toàn quốc <strong>Băng
+                                    tải PVC
+                                    - PU - PE</strong>, băng
+                                tải chịu nhiệt, băng tải lưới nhựa, băng tải xích nhựa, băng tải xích inox, băng tải cao
+                                su, dây đai dẹt, dây curoa, dây đai răng, đinh móc nối băng tải, ...
+                                <br><br>
+
+                                Cho tất cả các ngành công nghiệp như Ngành sản xuất giày, Ngành gỗ, Ngành điện tử,
+                                <strong>Ngành
+                                    in ấn - in hoa</strong>, Ngành bao bì, Ngành thực phẩm, Ngành thuốc lá,
+                                Ngành đá
+                                Granit, Ngành
+                                hàng không, Ngành thể thao ... Với giá ưu đãi nhất hiện nay.
                             </span>
 
 
                         </div>
-                        <div class="show-more">Xem thêm</div>
                     </div>
                 </div>
                 <div class="row product-list" id="product-list">
 
+                </div>
+                <div class="catalog-download">
+                    <span>Download catalog Băng tải ngành điện tử</span>
                 </div>
             </div>
     </section>
@@ -173,25 +183,28 @@
     <div class="logo-section spad">
         <div class="logo-items owl-carousel">
             <div class="logo-item">
-                <img src="./img/logos/Nestlé.svg.png" alt="">
+                <img src="../img/logos/Nestlé.svg.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Pepsi_logo.png" alt="">
+                <img src="../img/logos/Pepsi_logo.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/olam-international.png" alt="">
+                <img src="../img/logos/olam-international.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Logo-AceCook-VN.png" alt="">
+                <img src="../img/logos/Logo-AceCook-VN.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Logo-JT-Express.png" alt="">
+                <img src="../img/logos/Logo-JT-Express.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/GS.png" alt="">
+                <img src="../img/logos/GS.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Kenda_Logo.svg.png" alt="">
+                <img src="../img/logos/Kenda_Logo.svg.png" alt="">
+            </div>
+            <div class="logo-item">
+                <img src="../img/logos/cropped-thp.png" alt="">
             </div>
         </div>
     </div>
@@ -208,8 +221,7 @@
                         <div class="single-footer-widget text-left">
                             <h4>Địa Chỉ</h4>
                             <ul>
-                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí
-                                    Minh
+                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí Minh
                                 </li>
                             </ul>
                         </div>
@@ -228,8 +240,7 @@
                         <div class="single-footer-widget text-left">
                             <h4>Mail</h4>
                             <ul>
-                                <li><a href="mailto:phongkinhdoanh@thecaovn.com">phongkinhdoanh@thecaovn.com</a>
-                                </li>
+                                <li><a href="mailto:phongkinhdoanh@thecaovn.com">phongkinhdoanh@thecaovn.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -276,15 +287,17 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="./js/products/DayTruyenDong.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.nice-select.min.js"></script>
+    <script src="../js/mixitup.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/career/Electronics.js"></script>
+
+
 </body>
 
 </html>
