--- a/career/Tobacco industry.html
+++ b/career/Tobacco industry.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ngành sản xuất bánh xe</title>
+    <title>Ngành thuốc lá</title>
     <link type="image/x-icon" rel="icon" href="../img/favicon/favicon.ico" />
 
     <!-- Google Font -->
@@ -95,8 +95,8 @@
                         </li>
                         <li><a class=" active root-menu" href="./Career.html">Ngành nghề</a>
                             <p>Ngành nghề</p>
-                            <ul class="sub-menu career">
-                                <li><a href="#">Ngành sản xuất bánh xe</a>
+                            <ul class="active sub-menu career">
+                                <li><a href="./Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
                                 </li>
                                 <li><a href="./Aviation.html">Ngành hàng không</a></li>
                                 <li><a href="./Food industry.html">Ngành thực phẩm</a></li>
@@ -104,7 +104,7 @@
                                 <li><a href="./Packaging industry.html">Ngành bao bì</a></li>
                                 <li><a href="./Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
                                 <li><a href="./Electronics.html">Ngành điện tử</a></li>
-                                <li><a href="./Tobacco industry.html">Ngành thuốc lá</a></li>
+                                <li><a href="#">Ngành thuốc lá</a></li>
                                 <li><a href="./Granite industry.html">Ngành đá Granite</a></li>
                                 <li><a href="./Fisheries.html">Ngành thủy sản</a></li>
                                 <li><a href="./Steel sheet industry.html">Ngành tôn thép</a></li>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="info-pic-comp offset-lg-1">
                     <div class="lookbok-pic">
-                        <img src="../img/career/BanhXe/-bang-tai-san-xuat-banh-xe.jpg" alt="">
+                        <img src="../img/career/NganhThuocLa/bang-tai-thuoc-la.jpg" alt="">
                     </div>
                 </div>
 
@@ -145,35 +145,53 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <div class="section-title text-center">
-                            <h3>Ngành sản xuất bánh xe</h3>
+                            <h3>Ngành thuốc lá</h3>
                         </div>
 
                         <div class="section-detail PTFE">
                             <span>
-                                <strong>CÔNG TY THẾ CAO </strong>chuyên sản suất và cung cấp trên toàn quốc
-                                <strong>Băng
-                                    tải PVC - PU - PE</strong>, băngtải chịu nhiệt, băng tải lưới nhựa, băng tải
-                                xích
-                                nhựa, băng tải xích inox, băng tải caosu, dây đai dẹt, dây curoa, dây PU răng, đinh
-                                móc
-                                nối băng tải,...
+                                <strong>CÔNG TY THẾ CAO</strong> chuyên sản suất và cung cấp trên toàn quốc <strong>Băng
+                                    tải PVC
+                                    - PU - PE</strong>, băng
+                                tải chịu nhiệt, băng tải lưới nhựa, băng tải xích nhựa, băng tải xích inox, băng tải cao
+                                su, dây đai dẹt, dây curoa, dây đai răng, đinh móc nối băng tải,...
                                 <br><br>
 
-                                <strong> Băng Tải PVC, băng tải PU thường được ứng dụng cho các ngành như:</strong>
-                                <ul>
-                                    <li>Ngành thực phẩm</li>
-                                    <li>Ngành gỗ</li>
-                                    <li>Ngành indate</li>
-                                    <li>Ngành hàng không</li>
-                                    <li>Ngành giầy da</li>
-                                    <li>Ngành thuốc lá</li>
-                                    <li>Ngành chế biến thủy sản</li>
-                                </ul>
+                                Cho tất cả các ngành công nghiệp như Ngành sản xuất giày, Ngành gỗ, Ngành điện tử, Ngành
+                                in ấn - in hoa, Ngành bao bì, Ngành thực phẩm, <strong>Ngành thuốc lá</strong>, Ngành đá
+                                Granit, Ngành
+                                hàng không, Ngành thể thao... Với giá ưu đãi nhất hiện nay.
+                                <br><br>
 
+                                Quá trình sản xuất thuốc lá trải qua nhiều giai đoạn và mỗi giai đoạn đều ở điều kiện
+                                nhiệt độ và yêu cầu khác nhau nên chúng ta phải lựa chọn loại băng tải phù hợp để đảm
 
-                                <strong>Công ty Thế Cao</strong> luôn đảm bảo chất lượng băng và kỹ thuật ép nối cho sản
-                                phẩm đạt chất lượng tốt nhất đến tay khách hàng. Quý khách có nhu cầu hãy liên hệ và cho
-                                chúng tôi quy cách cụ thể sẽ được hỗ trợ và tiết kệm thời gian chi phí tốt nhất.
+                                bảo về độ bền và đạt năng suất. <br><br>
+
+                                <strong>Băng tải sử dụng trong ngành sản xuất thuốc lá</strong> bao gồm các loại sau:
+                                <br>
+
+                                ✓ Băng tải PVC (polyvinyl chloride) chịu được nhiệt độ -15 ~ 80ºC
+                                <br>
+
+                                ✓ Băng tải PU (Polyurethane) chịu được nhiệt độ -20 ~ 80ºC
+
+                                <br>
+                                ✓ Băng tải PE (polyolefine) chịu được nhiệt độ -30 ~ 60ºC
+
+                                <br>
+                                ✓ Băng tải TPEE (Polyester) chịu được nhiệt độ -30 ~ 100ºC
+
+                                <br>
+                                ✓ Băng tải Silicone chịu được nhiệt độ -30 ~ 150ºC
+
+                                <br>
+                                <br>
+                                Để đáp ứng yêu cầu cụ thể quý công ty hãy liên hệ chúng tôi sẽ giải đáp những thắc mắc,
+                                tư vấn về băng tải phù hợp nhất để tiết kiệm chi phí cho khách hàng. Với 20 năm kinh
+                                nghiệm trong thị trường băng tải <strong>Công Ty Thế Cao</strong> đảm bảo sẽ mang lại sự
+                                hài lòng về uy
+                                tín chất lượng và giá thành hợp lý.
                             </span>
 
 
@@ -185,7 +203,7 @@
 
                 </div>
                 <div class="catalog-download">
-                    <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
+                    <span>Download catalog Băng tải ngành thuốc lá</span>
                 </div>
             </div>
     </section>
@@ -307,7 +325,7 @@
     <script src="../js/jquery.nice-select.min.js"></script>
     <script src="../js/mixitup.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/career/Wheel manufacturing industry.js"></script>
+    <script src="../js/career/Tobacco industry.js"></script>
 
 
 </body>
