--- a/career/Wood industry.html
+++ b/career/Wood industry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="vn">
 
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,8 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Đinh Flexco</title>
-    <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
+    <title>Ngành gỗ</title>
+    <link type="image/x-icon" rel="icon" href="../img/favicon/favicon.ico" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
@@ -16,13 +16,13 @@
         rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
 </head>
 
 <body>
@@ -57,15 +57,12 @@
             </div>
         </div>
     </div>
-
     <!-- Header Info Begin -->
     <div class="header-info">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="header-item">
-                        <p class="comp-name">CÔNG TY TNHH MTV THẾ CAO</p>
-                    </div>
+                <div class="header-item">
+                    <p class="comp-name">CÔNG TY TNHH MTV THẾ CAO</p>
                 </div>
             </div>
         </div>
@@ -77,57 +74,69 @@
         <div class="container-fluid">
             <div class="inner-header">
                 <div class="logo">
-                    <a href="./index.html"><img src="./img/logo.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/logo.png" alt=""></a>
+                    <a class="logo-mobile" href="../index.html"><img src="../img/logo-mobile.png" alt=""></a>
+
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
-                        <li><a href="./index.html">Trang chủ</a></li>
-                        <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="active root-menu" href="#">Sản phẩm</a>
+                        <li><a href="../index.html">Trang chủ</a></li>
+                        <li><a href="../infomation.html">Giới thiệu</a></li>
+                        <li><a class=" root-menu" href="#">Sản phẩm</a>
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
-                                <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="./ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
-                                <li><a href="./XichNhua.html">Băng tải xích nhựa</a></li>
-                                <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
-                                <li><a href="#">Đinh FLexco</a></li>
+                                <li><a href="../PVC.html">Băng tải PVC, PU, TPU</a></li>
+                                <li><a href="../ChiuNhiet.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="../XichNhua.html">Băng tải xích nhựa</a></li>
+                                <li><a href="../PURang.html">Dây PU răng</a></li>
+                                <li><a href="../DayTruyenDong.html">Dây đai truyền động</a></li>
+                                <li><a href="../dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
-                        <li><a class="root-menu" href="./career/Career.html">Ngành nghề</a>
+                        <li><a class=" active root-menu" href="./Career.html">Ngành nghề</a>
                             <p>Ngành nghề</p>
-                            <ul class="sub-menu career">
-                                <li><a href="./career/Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
+                            <ul class="active sub-menu career">
+                                <li><a href="./Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
                                 </li>
-                                <li><a href="./career/Aviation.html">Ngành hàng không</a></li>
-                                <li><a href="./career/Food industry.html">Ngành thực phẩm</a></li>
-                                <li><a href="./career/Wood industry.html">Ngành gỗ</a></li>
-                                <li><a href="./career/Packaging industry.html">Ngành bao bì</a></li>
-                                <li><a href="./career/Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
-                                <li><a href="./career/Electronics.html">Ngành điện tử</a></li>
-                                <li><a href="./career/Tobacco industry.html">Ngành thuốc lá</a></li>
-                                <li><a href="./career/Granite industry.html">Ngành đá Granite</a></li>
-                                <li><a href="./career/Fisheries.html">Ngành thủy sản</a></li>
-                                <li><a href="./career/Steel sheet industry.html">Ngành tôn thép</a></li>
-                                <li><a href="./career/Aluminum industry.html">Ngành nhôm</a></li>
-                                <li><a href="./career/Sports industry.html">Ngành thể thao</a></li>
-                                <li><a href="./career/Other heavy industry.html">Ngành công nghiệp nặng khác</a></li>
+                                <li><a href="./Aviation.html">Ngành hàng không</a></li>
+                                <li><a href="./Food industry.html">Ngành thực phẩm</a></li>
+                                <li><a href="#">Ngành gỗ</a></li>
+                                <li><a href="./Packaging industry.html">Ngành bao bì</a></li>
+                                <li><a href="./Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
+                                <li><a href="./Electronics.html">Ngành điện tử</a></li>
+                                <li><a href="./Tobacco industry.html">Ngành thuốc lá</a></li>
+                                <li><a href="./Granite industry.html">Ngành đá Granite</a></li>
+                                <li><a href="./Fisheries.html">Ngành thủy sản</a></li>
+                                <li><a href="./Steel sheet industry.html">Ngành tôn thép</a></li>
+                                <li><a href="./Aluminum industry.html">Ngành nhôm</a></li>
+                                <li><a href="./Sports industry.html">Ngành thể thao</a></li>
+                                <li><a href="./Other heavy industry.html">Ngành công nghiệp nặng khác</a></li>
                             </ul>
                         </li>
-                        <li><a href="./service.html">Dịch vụ</a></li>
-                        <li><a href="./contact.html">Liên hệ</a></li>
+                        <li><a href="../service.html">Dịch vụ</a></li>
+                        <li><a href="../contact.html">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
-    <!-- Hero Slider Begin -->
-    <section class="hero-slider">
-        <div class="hero-items owl-carousel">
+    <!-- Lookbok Section Begin -->
+    <section class="lookbok-section lookbok-section-info">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="info-pic-comp offset-lg-1">
+                    <div class="lookbok-pic">
+                        <img src="../img/career/NganhGo/B ANG TAI NGANH GO SLIDE 2.jpg" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+
         </div>
     </section>
-    <!-- Hero Slider End -->
+    <!-- Lookbok Section End -->
 
     <!-- Latest Product Begin -->
     <section class="latest-products spad">
@@ -136,81 +145,76 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <div class="section-title text-center">
-                            <h3>Đinh FLexco</h3>
+                            <h3>Ngành gỗ</h3>
                         </div>
 
-                        <div class="section-detail">
+                        <div class="section-detail PTFE">
                             <span>
-                                <strong>Đinh nối băng tải</strong> thương hiệu <strong>FLEXCO</strong> đến từ Mỹ là một
-                                trong những
-                                phương pháp tối ưu
-                                trong việc kết nối 2 đầu băng tải và được áp dụng trong nhiều ngành công nghiệp sản xuất
-                                khác nhau như: nông nghiệp, xử lí bưu kiện, sản xuất gỗ, thực phẩm ,…
+                                Cho tất cả các ngành công nghiệp như Ngành sản xuất giày, <strong>Ngành gỗ</strong>,
+                                Ngành điện tử, Ngành
+                                in ấn - in hoa, Ngành bao bì, Ngành thực phẩm, Ngành thuốc lá, Ngành đá Granit, Ngành
+                                hàng không, Ngành thể thao... Với giá ưu đãi nhất hiện nay.
+
                                 <br><br>
-                                <h5><strong>Ưu điểm:</strong></h5>
-                                <ul>
-                                    <li>Lắp đặt đơn giản và nhanh chóng giúp tiết kiệm thời gian.</li>
-                                    <li>Có độ bền cao và tiếp xúc được nhiều môi trường khác nhau như nhiệt độ, độ ẩm
-                                        hoặc chất gây ô nhiễm.</li>
-                                    <li>Giúp tháo băng tải mà không cần cắt rời băng tải.</li>
-                                    <li>Đinh móc nối băng tải là yếu tố chính giúp cho việc nối tròn của dây băng một
-                                        cách nhanh chóng và linh động. Giúp khách hàng có thể tiết kiệm được thời gian
-                                        tối đa khi cần thay băng mà ko cần tháo dỡ máy gây mất thời gian và công sức.
-                                    </li>
-                                </ul>
-                                <br>
 
-                                <strong>Đinh móc inox</strong> được chia làm nhiều dạng khác nhau, có <strong>đinh móc
-                                    dẹp</strong> và
-                                <strong>đinh móc tròn</strong>. Tùy
-                                theo từng loại băng tải mà được dùng loại đinh móc khác nhau, độ dày phi móc cũng được
-                                điều chỉnh cho phù hợp.
-                                <br><br><strong>Đinh bản lề</strong> nhựa cũng được dùng cho nối băng cho những máy dò
-                                kim
-                                loại, tải trọng nhẹ và tốc độ chạy chậm.<br><br>
-                                <strong>Đinh bản lề inox</strong> dùng được nối cho dây băng PVC,PU hay băng tải cao su
-                                có độ dày khác
-                                nhau.
+                                - Ngành Gỗ băng tải thường dùng trong máy chà nhám, bề mặt băng tải phải có độ ma sát
+                                cao chủ yếu dùng loại PVC pha cao su, hoặc PVC bề mặt gai.
+                                <br><br>
 
+                                - <strong>Băng Tải Gai</strong> là một trong những băng tải <strong>ngành gỗ</strong>,
+                                được ứng dụng rất
+                                nhiều trong sản
+                                xuất đặc biệt là trong các khu công nghiệp, các cụm công nghiệp, các làng nghề. Với khả
+                                năng thích nghi đa dạng Băng Tải PVC xanh nhám Gai chủ yếu được sử dụng tải vật liệu
+                                trong môi trường sạch sẽ.
+                                <br><br>
+
+                                - Ngoài ra còn được ứng dụng trong ngành chế biên thực phẩm ,sản xuất bánh kẹo, chế biến
+                                gỗ ,nông ,lâm sản…Nghành lắp ráp linh kiện điện tử, nghành thuốc lá , chè, cà phê,nghành
+                                may mặc v.v…
                             </span>
+
 
                         </div>
                         <div class="show-more">Xem thêm</div>
                     </div>
                 </div>
                 <div class="row product-list" id="product-list">
+
+                </div>
+                <div class="catalog-download">
+                    <span>Download catalog Băng tải ngành gỗ</span>
                 </div>
             </div>
     </section>
     <!-- Latest Product End -->
 
-
     <!-- Logo Section Begin -->
     <div class="logo-section spad">
         <div class="logo-items owl-carousel">
             <div class="logo-item">
-                <img src="./img/logos/Nestlé.svg.png" alt="">
+                <img src="../img/logos/Nestlé.svg.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Pepsi_logo.png" alt="">
+                <img src="../img/logos/Pepsi_logo.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/olam-international.png" alt="">
+                <img src="../img/logos/olam-international.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Logo-AceCook-VN.png" alt="">
+                <img src="../img/logos/Logo-AceCook-VN.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Logo-JT-Express.png" alt="">
+                <img src="../img/logos/Logo-JT-Express.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/GS.png" alt="">
+                <img src="../img/logos/GS.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/Kenda_Logo.svg.png" alt="">
+                <img src="../img/logos/Kenda_Logo.svg.png" alt="">
             </div>
             <div class="logo-item">
-                <img src="./img/logos/cropped-thp.png" alt="">
+                <img src="../img/logos/cropped-thp.png" alt="">
             </div>
         </div>
     </div>
@@ -293,15 +297,17 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="./js/products/DinhFlexco.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.nice-select.min.js"></script>
+    <script src="../js/mixitup.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/career/Wood industry.js"></script>
+
+
 </body>
 
 </html>
