--- a/infomation.html
+++ b/infomation.html
@@ -87,6 +87,26 @@
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
+                        <li><a class="root-menu" href="./career/Career.html">Ngành nghề</a>
+                            <p>Ngành nghề</p>
+                            <ul class="sub-menu career">
+                                <li><a href="./career/Wheel manufacturing industry.html">Ngành sản xuất bánh xe</a>
+                                </li>
+                                <li><a href="./career/Aviation.html">Ngành hàng không</a></li>
+                                <li><a href="./career/Food industry.html">Ngành thực phẩm</a></li>
+                                <li><a href="./career/Wood industry.html">Ngành gỗ</a></li>
+                                <li><a href="./career/Packaging industry.html">Ngành bao bì</a></li>
+                                <li><a href="./career/Printing and garment industry.html">Ngành in ấn, may mặc</a></li>
+                                <li><a href="./career/Electronics.html">Ngành điện tử</a></li>
+                                <li><a href="./career/Tobacco industry.html">Ngành thuốc lá</a></li>
+                                <li><a href="./career/Granite industry.html">Ngành đá Granite</a></li>
+                                <li><a href="./career/Fisheries.html">Ngành thủy sản</a></li>
+                                <li><a href="./career/Steel sheet industry.html">Ngành tôn thép</a></li>
+                                <li><a href="./career/Aluminum industry.html">Ngành nhôm</a></li>
+                                <li><a href="./career/Sports industry.html">Ngành thể thao</a></li>
+                                <li><a href="./career/Other heavy industry.html">Ngành công nghiệp nặng khác</a></li>
+                            </ul>
+                        </li>
                         <li><a href="./service.html">Dịch vụ</a></li>
                         <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
